--- a/src/Styles.css
+++ b/src/Styles.css
@@ -4,10 +4,10 @@
 
 
 /* MDB Navbar Starts */
-.right{
-    margin-left: auto;
-}
-.nav-option{
+    .right{
+        margin-left: auto;
+    }
+    .nav-option{
     font-family: 'Lexend Deca', sans-serif;
 }
 strong#nav-brand{
@@ -89,3 +89,159 @@ strong#nav-brand{
     font-family: 'Roboto', sans-serif;
 }
 /* FeaturedItems Ends */
+
+/* 
+------------- About Section Starts ----------
+*/
+
+/* About Component Starts */
+.about-mtmb{
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+.a-header{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 60px;
+    text-transform: uppercase;
+    text-align: center;
+}
+.a-content{
+    text-justify: auto;
+    margin-top: 2%;
+}
+
+/* About Component Ends */
+
+/* Team Component Starts */
+.team-container{
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+.t-header{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 60px;
+    text-align: center;
+}
+.t-head{
+    font-family: 'Roboto', sans-serif;
+    font-size: 22px;
+    text-align: center;
+}
+.t-subh{
+    font-family: 'Montserrat', sans-serif;
+    margin-top: -5%;
+    font-size: 10px;
+    text-align: center;
+}
+.align-center{
+    margin-top: -5%;
+    text-align: center;
+}
+.t-icon{
+    padding: 10px;
+}
+
+/* Team Component Ends */
+
+/* ProjectTools Component Starts */
+.pt-header{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 60px;
+    text-align: center;
+}
+/* ProjectTools Component Ends */
+
+/* Use Component Starts */
+.u-header{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 60px;
+    text-align: center;
+}
+.u-header-sub{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 35px;
+}
+.use-container{
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+.use-inst{
+    font-family: 'Montserrat', sans-serif;
+
+}
+/* Use Component Ends */
+/*
+---------------- ContactComponent -------------
+*/
+
+/* Contact Component Starts */
+.c-header{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+}
+.margin-fix{
+    margin-top: 2%;
+    margin-bottom: 10%;
+}
+.phone-size{
+    width: 260px ;
+    height: 260px ;
+    margin-top: 20%;
+    margin-left: 10%;
+}
+/* Contact Component Ends */
+
+/* Company Component Starts */
+.comp-header{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    text-align: center;
+    font-size: 60px;
+    margin-top: 8%;
+    margin-bottom: 5%;
+}
+.comp-header-sub{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 40px;
+}
+.comp-content{
+    margin-top: 2%;
+    margin-left: 10%;
+}
+.comp-header-c{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;  
+    margin-top: 12%;
+    margin-left: 10%;
+}
+.hr-comp{
+    border-left: 8px solid #0099CC;
+
+}
+.comp-email{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;  
+    margin-left: 10%;
+    color:black;
+    text-decoration: none;
+}
+.comp-email:hover{
+    text-decoration: none;
+}
+.comp-social{
+    font-family: 'Montserrat', sans-serif; 
+    margin-left: 10%;
+    margin-top: 3%;
+}
+.social-icons{
+    margin-top: 1%;
+}
+
+/* Company Component Ends */
+
