--- a/src/Styles.css
+++ b/src/Styles.css
@@ -245,3 +245,83 @@ strong#nav-brand{
 
 /* Company Component Ends */
 
+/* Breadcrumb Component Starts */
+.bcrumbs-size{
+    margin-top: 0%;
+    margin-bottom: 0%;
+}
+.img-bread{
+    height: 100%;
+}
+.brc-img{
+    background-image: url('./img/bcrumbs-bg.jpg');
+    height: 100%;
+    width:  100%;
+}
+.brc-content{
+    margin-top: 10%;
+    margin-bottom: auto;
+}
+.brc-ins-cont{
+    margin-bottom: 5%;
+}
+.brc-header{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold; 
+    font-size: 50px;
+}
+.brc-bread-link{
+    
+}
+/* Breadcrumb Component Ends */
+
+/* Login Component Starts */
+.l-container{
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
+.login-header-container{
+
+}
+.login-d-header{
+    color: #33b5e5;
+    font-size: 100px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold; 
+    text-transform: uppercase;
+}
+.login-d-content{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: light; 
+}
+.login-bbn-f{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 20px;
+    width: 100%;
+    height: 50px;
+}
+.login-pass-forgot{
+    color: grey;
+    float: right;
+    padding: 10px;
+    margin-top: -5%;
+}
+.login-pass-forgot:hover{
+    text-decoration: none;
+}
+/* Login Component Ends */
+
+/* Register Component Starts */
+.register-d-header{
+    color: #00C851;
+    font-size: 100px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold; 
+    text-transform: uppercase;
+}
+.register-d-content{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: light; 
+}
+/* Register Component Ends */
