added the margin for the icon (google sign-in button)

--- a/src/Styles.css
+++ b/src/Styles.css
@@ -310,6 +310,9 @@ strong#nav-brand{
 .login-pass-forgot:hover{
     text-decoration: none;
 }
+.icon-m{
+    margin-right: 2%;
+}
 /* Login Component Ends */
 
 /* Register Component Starts */
