--- a/src/Styles.css
+++ b/src/Styles.css
@@ -23,17 +23,39 @@ strong#nav-brand{
     font-size: 70px;
     letter-spacing: -0.01em;
 }
-.caption-sub-header{
-
+.caption-header-2{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 70px;
+    letter-spacing: -0.01em;
 }
-.caption-content{
-
+.caption-header-3{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 70px;
+    letter-spacing: -0.01em;
 }
 .guide-h{
     font-size: 80px;
     letter-spacing: 0.02em;
     text-transform: uppercase;
 }
+/* ===== Media Query ===== */
+@media only screen and (max-width: 600px) {
+    .caption-header{
+        font-size: 50px;
+    }
+    .caption-header-2{
+        font-size: 40px;
+    }
+    .caption-header-3{
+        font-size: 30px;
+    }
+    .guide-h{
+        font-size: 50px;
+    }   
+}
+
 /* MDB Carousel Captions Ends */
 
 /*
