--- a/src/Styles.css
+++ b/src/Styles.css
@@ -139,6 +139,12 @@ strong#nav-brand{
     text-justify: auto;
     margin-top: 2%;
 }
+/* ========== Media Query ======== */
+@media only screen and (max-width: 600px) {
+    .a-header{
+        font-size: 40px;
+    }
+}
 
 /* About Component Ends */
 
