updated the classes for the div

--- a/capstone-react/src/Styles.css
+++ b/capstone-react/src/Styles.css
@@ -582,6 +582,7 @@ strong#nav-brand{
 }
 .cart-item-container{
     margin-top: -5%;
+    margin-bottom: 10%;
 }
 .cart-item-name{
     font-family: 'Roboto', sans-serif;
